[package]
name = "repeater"
version = "0.1.0"
edition = "2021"
authors = [
  "Pit Kleyersburg <pit.kleyersburg@kaiserkraft.com>",
  "TAKKT Industrial & Packaging GmbH <webshop-devops@kaiserkraft-europa.de>"
]
license = "Apache-2.0"
description = "Command-line tool to parse and then repeat GET-requests of an access-log against a different host"

[[bin]]
name = "r7"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive", "cargo"] }
csv = "1.1.6"
futures = "0.3.25"
hifitime = "3.6.0"
indicatif = { version = "0.17.1", features = ["tokio"] }
reqwest = { version = "0.11.12", features = ["gzip"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full", "time"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
