[package]
name = "repeater"
version = "0.1.0"
edition = "2021"
authors = [
  "Pit Kleyersburg <pit.kleyersburg@takkt.com>",
  "TAKKT Industrial & Packaging GmbH <webshop-devops@kaiserkraft-europa.de>"
]
license = "Apache-2.0"
description = "Command-line tool to parse and then repeat GET-requests of an access-log against a different host"

[[bin]]
name = "r7"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive", "cargo", "wrap_help"] }
csv = "1.3.0"
futures = "0.3.31"
hifitime = "4.0.0"
indicatif = { version = "0.17.8", features = ["tokio"] }
reqwest = { version = "0.12.9", features = ["gzip"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
