[package]
name = "repeater"
version = "0.1.0"
edition = "2021"
authors = [
  "Pit Kleyersburg <pit.kleyersburg@takkt.com>",
  "TAKKT Industrial & Packaging GmbH <webshop-devops@kaiserkraft-europa.de>"
]
license = "Apache-2.0"
description = "Command-line tool to parse and then repeat GET-requests of an access-log against a different host"

[[bin]]
name = "r7"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive", "cargo", "wrap_help"] }
csv = "1.3.1"
hifitime = "4.0.2"
indicatif = { version = "0.17.9", features = ["tokio"] }
reqwest = { version = "0.12.12", features = ["gzip"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
